2009-10-23  Dan Bernstein  <mitz@apple.com>

        Reviewed by Alexey Proskuryakov.

        <rdar://problem/7294131> Assertion failure in AuthenticationMac at
        mac(const Credential&) after authenticating to MobileMe Gallery movie

        * platform/network/Credential.cpp:
        (WebCore::Credential::Credential): Initialize m_persistence.
        (WebCore::Credential::isEmpty): Made this method const.
        * platform/network/Credential.h:
        * platform/network/mac/AuthenticationMac.mm:
        (WebCore::mac): Return nil if the Credential is empty.

2009-10-23  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Timothy Hatcher.

        Fixes <https://bugs.webkit.org/show_bug.cgi?id=30617>.
        Web Inspector: Resources Scope Bar Should Allow Combinations.
        
        Refactor the filtering in ResourcePanel to make it match ConsoleView,
        and add a divider between All, and the other choices of Resource types.

        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.ResourcesPanel):
        (WebInspector.ResourcesPanel.prototype.filter):
        (WebInspector.ResourcesPanel.prototype._updateFilter):
        * inspector/front-end/inspector.css:

2009-10-23  Chris Evans  <cevans@chromium.org>

        Reviewed by Adam Barth.

        Ignore the Refresh header if we're in view source mode.

        https://bugs.webkit.org/show_bug.cgi?id=27239

        Test: http/tests/security/view-source-no-refresh.html

        * loader/FrameLoader.cpp: ignore Refresh in view-source mode.

2009-10-23  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=30734
        Remove XMLTokenizer::m_currentNodeIsReferenced

        No change in behavior, no tests.

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::setCurrentNode):
        * dom/XMLTokenizer.h: